--- a/Martify/Views/AddProduct.xaml
+++ b/Martify/Views/AddProduct.xaml
@@ -14,6 +14,7 @@
         Width="850"
         WindowStyle="None"
         BorderThickness="0"
+        Background="Transparent"
         AllowsTransparency="True"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize">
@@ -58,9 +59,7 @@
     </Window.Resources>
 
     <Border Background="#F5F5F5" CornerRadius="15">
-        <Border.Effect>
-            <DropShadowEffect BlurRadius="20" ShadowDepth="0" Opacity="0.3"/>
-        </Border.Effect>
+       
 
         <Grid>
             <Grid.RowDefinitions>
@@ -73,10 +72,11 @@
                     Background="#2196F3" 
                     CornerRadius="15,15,0,0"
                     MouseLeftButtonDown="Border_MouseLeftButtonDown">
-                <Grid>
+                <Grid Background="Transparent">
                     <TextBlock Text="Thêm sản phẩm mới" 
                                FontSize="20" 
                                FontWeight="SemiBold"
+                               Background="Transparent"
                                Foreground="White"
                                VerticalAlignment="Center"
                                Margin="25,0,0,0"/>
@@ -86,6 +86,7 @@
             </Border>
 
             <!-- Nội dung chính -->
+            <Border Grid.Row="1" Background="#F5F5F5" CornerRadius="0 0 15 15"></Border>
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="280"/>
@@ -354,6 +355,7 @@
                     </Grid>
                 </Border>
             </Grid>
+
         </Grid>
     </Border>
 </Window>
