--- a/Martify/Views/ImportProducts.xaml
+++ b/Martify/Views/ImportProducts.xaml
@@ -182,6 +182,7 @@
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="50"/>
                                                 <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="50"/>
                                             </Grid.ColumnDefinitions>
 
                                             <Ellipse Grid.Column="0" 
@@ -215,7 +216,20 @@
                                                                FontSize="11"
                                                                Foreground="#2196F3"
                                                                FontWeight="SemiBold"/>
+
                                                 </StackPanel>
+                                            </StackPanel>
+                                            <StackPanel Grid.Column="2" Orientation="Horizontal" Margin="0,3,0,0" HorizontalAlignment="Right">
+                                                <TextBlock 
+                                                           Margin="0 0 0 0"
+                                                           VerticalAlignment="Center"
+                                                           Text="SL:"
+                                                           Foreground="#FF09A909"/>
+                                                <TextBlock Text="{Binding StockQuantity}"
+                                                           VerticalAlignment="Center"
+                                                           Margin="5 0 0 0"
+                                                           Foreground="#FF09A909"
+                                                           FontWeight="SemiBold"/>
                                             </StackPanel>
                                         </Grid>
                                     </Border>
